tests/errors/semantic/blocking/INHOMOGENEOUS_MIN.py
# Cannot determine final dtype of 'min' call with arguments of different types
# pylint: disable=missing-function-docstring, missing-module-docstring

a = min(True, 5+4j)
